--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
     background:#FFF8F3;
     width: 100%;
     height: 836px;
-    background-image: url("./portfolio-resources/images/header_bg.png"),url(./portfolio-resources/images/developer.png);
+    background-image: url("./images/header_bg.png"),url(./images/developer.png);
     background-repeat: no-repeat;
     background-position: bottom right, left;
 }
@@ -233,7 +233,7 @@ footer{
     border: 0;
     border-radius: 5px;
 }
-.footer-contact p{
+.footer-contact>p{
     color: #474747;
     font-size: 18px;
     margin-bottom: 30px;
