--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 header{
     background:#FFF8F3;
     width: 100%;
-    height: 836px;
+    /* height: 836px; */
     background-image: url("./images/header_bg.png"),url(./images/developer.png);
     background-repeat: no-repeat;
     background-position: bottom right, left;
@@ -55,14 +55,14 @@ nav ul li{
     align-items: center;
 }
 .baner h3{
-    font-size: 45px;
+    font-size: 2em;
     font-weight: 600;
-    line-height: 60px;
+    line-height: 40px;
 }
 .baner h1{
     font-weight: 700;
-    font-size: 85px;
-    line-height: 115px;
+    font-size:3em ; /*85px*/
+    line-height: 70px;
 }
 .baner p{
     color: #757575;
@@ -117,20 +117,11 @@ main{
     font-size: 18px;
     margin: 0 180px ;
 }
-.info-header{
-    display: flex;
-    margin: 30px 180px 10px 180px;
-    justify-content: space-around;
-    color: #757575;
-    font-size: 18px;
-}
 .info{
     display: flex;
-    margin: 0px 180px;
-    justify-content: space-around;
-}
-.info .brith{
-    margin-right: 124px;
+    justify-content: center;
+    margin-top: 15px;
+    gap: 20px;
 }
 
 .what-i-do{
@@ -145,7 +136,8 @@ main{
 }
 .card-parent{
     display: flex;
-    justify-content: space-around;
+    gap: 20px;
+    width: 267px;
 }
 .card{
     width: 267px;
@@ -179,9 +171,6 @@ main{
 }
 
 .edu{
-    width: 50%;
-}
-.exp{
     width: 50%;
 }
 .edu >h1,.exp >h1{
@@ -240,4 +229,99 @@ footer{
 }
 .footer-contact img{
     margin-right: 24px;
+}
+.hide{
+    display: none;
+}
+
+
+@media screen and (max-width:566px) {
+    header{
+        background-image: none;
+    }
+    nav h2{
+        margin: 0;
+        padding: 0 20px;
+    }
+    nav ,ul {
+        display: block;
+    }
+    ul{
+        margin: 0;
+    }
+    ul li{
+        margin-bottom: 5px;
+    }
+    .baner{
+        display: block;
+        margin: 0 ;
+    }
+    .baner .text{
+        margin: 0 20px;
+    }
+    .baner img{
+        width: 100%;
+        margin-left: 0;
+    }
+    main{
+        padding: 0;
+    }
+    .about p  {
+        margin: 0;
+        padding: 0 15px;
+        font-size: 18px;
+    }
+    .about> h3{
+        padding: 20px 0;
+    }
+    .about{
+        margin: 50px 0 0 0;
+    }
+    .info{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .what-i-do >h3{
+        margin-top: 30px;
+    }
+    .what-i-do >p{
+        margin: 0px;
+        padding: 10px 30px 20px;
+    }
+
+    .card-parent{
+        flex-direction: column;
+        margin: 0 auto;
+        margin-top: 20px;
+
+    }
+    .btn-primary{
+        padding: 10px 20px;
+        font-weight: 600;
+    }
+    .resume{
+        margin-top: 40px;
+    }
+    .edu >h1,.exp >h1{
+        margin-top: 20px;
+    }
+    .edu-exp{
+        flex-direction: column;
+        padding: 0 20px;
+    }
+    .edu{
+        width: 100%;
+       
+    }
+    footer{
+        padding: 0 20px;
+    }
+    .footer-content{
+        flex-direction: column;
+    }
+    h2{
+        margin: 10px 0 ;
+        font-size: 40px;
+        font-weight: 600;
+    }
 }
